--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start && json-server server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
